--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -57,8 +57,8 @@ enabled = false
 
 [auth]
 enabled = true
-site_url = "http://localhost:5173/mtgapp/"
-additional_redirect_urls = ["http://localhost:5173/mtgapp/**"]
+site_url = "http://localhost:5173/"
+additional_redirect_urls = ["http://localhost:5173/**"]
 jwt_expiry = 3600
 enable_refresh_token_rotation = true
 refresh_token_reuse_interval = 10
